@@ -4170,6 +4170,9 @@ work with any non-zero \typ{INT} but is not efficient in this case).
 \fun{GEN}{FpX_eval}{GEN x, GEN y, GEN p} evaluates the \kbd{FpX}~\kbd{x}
 at the \kbd{Fp}~\kbd{y}. The result is an~\kbd{Fp}.
 
+\fun{GEN}{FpX_dotproduct}{GEN x, GEN y, GEN p} return the scalar product
+$\sum_{i\geq 0} x_i\*y_i$ of the coefficients of $x$ and $y$.
+
 \fun{GEN}{FpXV_FpC_mul}{GEN V, GEN W, GEN p} multiplies a non-empty line
 vector of\kbd{FpX} by a column vector of \kbd{Fp} of compatible dimensions.
 The result is an~\kbd{FpX}.
